# mnist_tutorial

./: CMakeLists.txt  ImageHeader.cpp  ImageHeader.h  LabelHeader.cpp  LabelHeader.h  Layer.cpp  Layer.h  Makefile  Neuron.cpp  Neuron.h  Perceptron.cpp  Perceptron.h  Result.cpp  Result.h  TempMNIST  UtilityFunctions.cpp  UtilityFunctions.h  cmake_install.cmake  main.cpp
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: AWSSDKConfigVersion.cmake  platformDeps.cmake
